<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_category"
        android:enabled="true"
        android:icon="@drawable/ic_label_24px"
        android:title="@string/menu_category" />
    <item
        android:id="@+id/navigation_friend"
        android:enabled="true"
        android:icon="@drawable/ic_perm_contact_calendar_24px"
        android:title="@string/menu_friend" />
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_24px"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/navigation_alert"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_24px"
        android:title="@string/menu_notification" />
    <item
        android:id="@+id/navigation_myPage"
        android:enabled="true"
        android:icon="@drawable/ic_person_24px"
        android:title="@string/menu_myPage" />
</menu>