<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.MyPageThemeFragment.MyPageThemeFragment">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_myPageTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.DontForgetProject.Toolbar" />

    <RadioGroup
        android:id="@+id/radioGroup_myPageTheme"
        android:padding="@dimen/padding_size_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton_myPageTheme_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myPage_theme_white" />

        <RadioButton
            android:id="@+id/radioButton_myPageTheme_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myPage_theme_dark" />
        <RadioButton
            android:id="@+id/radioButton_myPageTheme_system"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myPage_theme_system" />
    </RadioGroup>

</LinearLayout>